# mytestchenyue

./: .gitmodules  ProjectHome.md
Test/: CppSQLite3.cpp  MsgDispatch.cpp  MsgWnd.cpp  MyClientSocket.h  Test.sln  Test.vcxproj  TestDlg.h  resource.h
Test/Test/: ClientSocket.cpp  ClientSocket.h  MsgDispatch.h  MsgWnd.h  MyClientSocket.cpp  Test.rc  Test.vcxproj.filters  TestDlg.cpp  sqlite3.lib
Test/TestConsole/: RingQueue.cpp  RingQueue.h  TestConsole.cpp  TestConsole.sln  TestConsole.vcxproj  TestConsole.vcxproj.filters  stdafx.cpp
Test/lib/: CrashRpt1403.exp  CrashRpt1403.lib  CrashRptProbe1403.lib
Test/testFFT/: testFFT.cpp  testFFT.sln  testFFT.vcxproj  testFFT.vcxproj.filters
Test/testbroadcast/: testbroadcast.cpp  testbroadcast.sln  testbroadcast.vcxproj  testbroadcast.vcxproj.filters
Test/testc20/: testc20.sln
Test/testdns/: testdns.cpp  testdns.sln  testdns.vcxproj  testdns.vcxproj.filters
Test/testesp32/: sdkconfig  sdkconfig.old
Test/testipv6/: getopt.c  testipv6.cpp  testipv6.sln  testipv6.vcxproj  testipv6.vcxproj.filters
Test/testrxcpp/: testrxcpp.cpp  testrxcpp.sln  testrxcpp.vcxproj  testrxcpp.vcxproj.filters
Test/testupnp/: Common.cpp  Common.h  ReadMe.txt  UPNPDefine.h  UPNPDevInfo.cpp  UPNPDevInfo.h  UPNPHttp.cpp  UPNPHttp.h  UPNPProtocol.h  UPNPProtocolSerialize.h  UPNPServiceAVTransport.cpp  UPNPServiceAVTransport.h  UPNPServiceBase.cpp  UPNPServiceBase.h  UPNPServiceConnectionManager.cpp  UPNPServiceConnectionManager.h  UPNPServiceKaiShu.cpp  UPNPServiceKaiShu.h  UPNPServiceMediaRenderer.cpp  UPNPServiceMediaRenderer.h  stdafx.cpp  (+6 more)
TestCSharp/: .gitignore
Unity/: .gitignore
android/: .gitignore  test1234.jks
android/SpineDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/SpineDemo/app/src/main/cpp/Spine/: CMakeLists.txt
android/SpineDemo/app/src/main/cpp/Spine/include/: Log.h  MyFrameBuffer.h  MyTexture.h  OpenGLESHelper.h  OpenGLShaderProgram.h  RenderCmdsCache.h  SpineItem.h  StructDefine.h  TransformFeedback.h  texture.h
android/SpineDemo/app/src/main/cpp/Spine/source/: Log.cpp  MyTexture.cpp  OpenGLESHelper.cpp  RenderCmdsCache.cpp  SpineItem.cpp  StructDefine.cpp  texture.cpp
android/SpineDemo/app/src/main/cpp/jni/: JNI.cpp  JniHelper.cpp  JniHelper.h  MacroDefine.h  RenderCmdsCacheJNI.cpp  ShareData.cpp  ShareData.h  Single.h  SkeletonJNI.cpp  SpineItemJNI.cpp  TextureLoaderJNI.cpp
android/TestCPlusPlus/app/src/main/cpp/TCPServer/: CMakeLists.txt  EPollObject.cpp  Log.h  ServerObject.cpp  ServerObject.h  TCPServer.cpp  TCPServer.h
android/TestCPlusPlus/app/src/main/cpp/native-lib/: CMakeLists.txt  native-lib.cpp
android/TestMedia/app/src/main/cpp/: CMakeLists.txt  JniHelper.cpp  LameHelper.cpp  LameHelper.h  Mp3Parse.cpp  Mp3Parse.h  Mp3Player.cpp  Mp3Player.h  OpenSLESHelper.cpp  OpenSLESHelper.h  RingQueue.cpp  SystemTime.cpp  SystemTime.h  TaskPool.cpp  TaskPool.h  TestMedia.cpp  byteswap.h
android/common/: BaseTime.cpp  BaseTime.h  BitBuffer.cpp  BitBuffer.h  CMakeLists.txt  ClockTime.cpp  ClockTime.h  EnumDefine.h  InterfaceDefine.h  Log.c  Log.cpp  Log.h  MacroDefine.h  MyLock.h  ObjectPool.h  OpenGLHelper.cpp  OpenGLHelper.h  OpenGLPlay.cpp  OpenGLPlay.h  OpenSLESHelper.cpp  OpenSLESHelper.h  OpenSLPlay.cpp  OpenSLPlay.h  RenderYUV420P.cpp  RenderYUV420P.h  RingQueue.cpp  RingQueue.h  SDLAudioHelper.cpp  SDLAudioHelper.h  Single.h  SystemTime.cpp  SystemTime.h  TaskPool.cpp  TaskPool.h  WAVDefine.h  byteswap.h  my_dlist.c  my_dlist.h  my_vector.c  my_vector.h
android/reverb/ijkplayer/src/main/jni/ijkmedia/ijkj4a/: CMakeLists.txt
android/reverb/ijkplayer/src/main/jni/ijkmedia/ijkplayer/: Android.mk  CMakeLists.txt
android/reverb/ijkplayer/src/main/jni/ijkmedia/ijksdl/: CMakeLists.txt
android/reverb/ijkplayer/src/main/jni/ijkmedia/ijksoundtouch/: CMakeLists.txt
android/testffmpeg/app/src/main/cpp/: CMakeLists.txt  Demuxer.cpp  Demuxer.h  EncodeHelper.cpp  EncodeHelper.h  FFMPEGTest.cpp  FFMPEGTest.h  FrameReceive.cpp  FrameReceive.h  InterfaceDefine.h  PlayManager.cpp  PlayManager.h  equalizer.c  equalizer.h  fft_param.c  fft_param.h  my_envelope.c  my_envelope.h  my_mutex.c  my_mutex.h  native-lib.cpp  real_fft.c  real_fft.h  reverb.c  reverb.h  reverb2.c  reverdhelper.c  reverdhelper.h  snd.c  sox_i.cpp  sox_i.h
android/testffmpeg/app/src/main/cpp/include/libavutil/: ffversion.h
android/testffmpeg/app/src/main/cpp/testffmpeg/: DirectSoundHelper.cpp  DirectSoundHelper.h  Equalizer.c  Equalizer.h  stdafx.cpp  testffmpeg.cpp  testffmpeg.sln  testffmpeg.vcxproj  testffmpeg.vcxproj.filters
android/testspine/app/src/main/cpp/: CMakeLists.txt  SDLMain.cpp  native-lib.cpp
android/testspine/app/src/main/cpp/SDL/: Makefile.in  Makefile.os2
android/testspine/app/src/main/cpp/SDL/include/: SDL_render.h
android/testspine/app/src/main/cpp/SDL/src/dynapi/: SDL_dynapi_overrides.h  SDL_dynapi_procs.h
android/testspine/app/src/main/cpp/SDL/src/render/: SDL_render.c  SDL_sysrender.h
android/testspine/app/src/main/cpp/SDL/src/render/opengl/: SDL_glfuncs.h  SDL_render_gl.c
android/testspine/app/src/main/cpp/SDL/src/render/opengles/: SDL_glesfuncs.h  SDL_render_gles.c
android/testspine/app/src/main/cpp/SDL2_image/: CMakeLists.txt
android/testspine/app/src/main/cpp/SDL2_image/VisualC/: SDL_image.vcxproj
android/testspine/app/src/main/cpp/SDL2_image/VisualC/showimage/: showimage.vcxproj
android/testspine/app/src/main/cpp/spine-c/spine-c/src/spine/: Atlas.c
android/testspine/app/src/main/cpp/spine-sdl/: CMakeLists.txt  OpenGLESHelper.cpp  SpineBase.cpp  SpineBase.h  SpineOpenGLES.cpp  SpineOpenGLES.h  spine-sdl.cpp  spine-sdl.h
arm/: build.sh  testarm  testarm.c
python/: callc.py  httpclient.py  httpserver.py  md5.py  qt.py  tcp.py  test.py  testnettype.py  testpython.py  ui_test.py
testgit/: testgit.txt
vue/: test.html
vulkan/testvulkan/testvulkan/: CMakeLists.txt  testvulkan.cpp  testvulkan.h
webrtc/agc/: CMakeLists.txt  SimpleWAVHelper.h  absl_base.lib  absl_strings.lib  absl_throw_delegate.lib  webrtcdemo.cpp  webrtcdemo.h
webrtc/agc/agc/: CMakeLists.txt
(+2612 files in other folders)
